# TicTacToe

./: .gitignore  CMakeLists.txt
include/: game.h  grid.h  player.h  posistion.h
src/: game.cpp  grid.cpp  main.cpp  player.cpp
